# Samples

./: .gitignore
Blazor/Basic/: Program.cs
Blazor/Bootstrap/: Bootstrap.csproj  Bootstrap.sln  Program.cs
Dash/src/: main.py
Golang/Basic/: cast.go  hello.go  main.go  variable_length_inout.go
Golang/grpc-lesson/: go.mod
Golang/parsecsv/: main.go  test.txt
MachineLearning/: SimplePerceptron.py
Portal/: pyproject.toml
Portal/src/: db.sqlite3
Portal/src/apps/accounts/: urls.py
Portal/src/apps/contract_management/: apps.py
Portal/src/apps/home/: models.py  urls.py  views.py
Portal/src/apps/issue_management/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Portal/src/apps/issue_management/migrations/: 0001_initial.py  0002_issuecomment_issue.py  0003_alter_issue_registered_by_alter_issue_status_and_more.py
Portal/src/apps/risk_management/: apps.py
Portal/src/portal/: settings.py  urls.py
Portal/src/templates/: base.html
Portal/src/templates/base_components/: main_header.html  main_sidebar.html
Portal/src/templates/home/: main.html
Portal/src/templates/issue_management/: detail.html  main.html
Pytorch/: Pipfile  Pytorchの基礎.ipynb  自動微分.ipynb
StrategyCalculator/: StrategyCalculator.sln
Vue/issue_management/issue_management_server/: pyproject.toml
Vue/issue_management/issue_management_server/src/: main.py
WpfUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WpfUI.csproj  WpfUI.sln
django_llm/: Pipfile  ttt.html
llm_apps/: Pipfile  home2.py
udemy-streamlit-llm-apps/: Pipfile  home.py
(+408 files in other folders)
