[tool.poetry]
name = "portal"
version = "0.1.0"
description = ""
authors = ["nobu <ngtagrs.0524@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-adminlte3 = "^0.1.6"
django-currentuser = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
